tests/bad/func/duplicate_labelled.oc
/// fail: Duplicate argument for parameter `b`


def foo(a: u32, b: u32 = 4, c: u32 = 5): u32 => a + b + c

def main() {
    foo(1, 2, b: 7)
}